--- a/my-microservice-client.properties
+++ b/my-microservice-client.properties
@@ -1,2 +1,4 @@
 lucky-word=Hello World from Spring Configuration Server!
+security.user.password=default
 eureka.client.serviceUrl.defaultZone=http://localhost:8010/eureka/
+server.port=${PORT:${SERVER_PORT:0}}
