--- a/string-generator-microservice.properties
+++ b/string-generator-microservice.properties
@@ -1,2 +1,3 @@
 words=Hello, World, Gustav, Hans, Max, Mustermann
 eureka.client.serviceUrl.defaultZone=http://localhost:8010/eureka/
+eureka.instance.instanceId=${spring.cloud.client.hostname}:${spring.application.name}:${spring.application.instance_id:${random.value}}
