--- a/string-generator-microservice-german.properties
+++ b/string-generator-microservice-german.properties
@@ -1,3 +1,3 @@
-words=Hello, World, Gustav, Hans, Max, Mustermann
+words=Wald, Baum, Haus, Garten, See, Hund, Katze
 eureka.client.serviceUrl.defaultZone=http://localhost:8010/eureka/
 eureka.instance.instanceId=${spring.cloud.client.hostname}:${spring.application.name}:${spring.application.instance_id:${random.value}}
