--- a/string-generator-microservice-english.properties
+++ b/string-generator-microservice-english.properties
@@ -1,3 +1,3 @@
-words=Hello, World, Gustav, Hans, Max, Mustermann
+words=Forest, Wood, House, Garden, Sea, Dog, Cat
 eureka.client.serviceUrl.defaultZone=http://localhost:8010/eureka/
 eureka.instance.instanceId=${spring.cloud.client.hostname}:${spring.application.name}:${spring.application.instance_id:${random.value}}
