--- a/my-microservice-client.properties
+++ b/my-microservice-client.properties
@@ -1,4 +1,4 @@
-lucky-word=Hello World from UPDATED Spring Configuration Server!
+lucky-word=Hello World from UPDATED #2 Spring Configuration Server!
 security.user.password=default
 eureka.client.serviceUrl.defaultZone=http://localhost:8010/eureka/
 server.port=${PORT:${SERVER_PORT:0}}
